--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>CRÁTER - Contacto</title>
+    <meta name="description" content="Contacto de la banda Cráter para contrataciones">
+    <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba, Contacto">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- LINK FAVICON -->
@@ -43,27 +45,31 @@
             </div>
         </nav>
     </header>
-    <main>
-        <h1>
-            CONTACTO
-        </h1>
-        <form>
-            <input type="text" placeholder="Nombre y apellido">
-            <input type="email" placeholder="Ingrese un e-mail">
-            <textarea name="Mensaje" id="" cols="30" rows="10"></textarea>
-            <input type="submit">
-        </form>
-    </main>
-    <section class="redes">
-        <h2 class="redessociales">REDES SOCIALES</h2>
-        <ul class="redesociales">
-            <li class="socialmedia"> <a href="https://www.instagram.com/craterrnr/"
-                    target="_blank">INSTAGRAM/CRATERRNR</a></li>
-            <li class="socialmedia"> <a href="https://api.whatsapp.com/send?phone=+5493564415471"
-                    target="_blank">WHATSAPP</a></li>
 
-        </ul>
-    </section>
+
+    <div class="contactopadre">
+        <section class="contacto">
+            <h1>
+                CONTACTO
+            </h1>
+            <form>
+                <input type="text" placeholder="Nombre y apellido">
+                <input type="email" placeholder="Ingrese un e-mail">
+                <textarea name="Mensaje" id="" cols="30" rows="10"></textarea>
+                <input type="submit">
+            </form>
+        </section>
+        <section class="redes">
+            <h2 class="redessociales">REDES SOCIALES</h2>
+            <ul class="redesociales">
+                <li class="socialmedia"> <a class="link" href="https://www.instagram.com/craterrnr/"
+                        target="_blank">INSTAGRAM/CRATERRNR</a></li>
+                <li class="socialmedia"> <a class="link" href="https://api.whatsapp.com/send?phone=+5493564415471"
+                        target="_blank">WHATSAPP</a></li>
+            </ul>
+            <img class="logocontacto" src="../img/logocrater.png" alt="Logo crater">
+        </section>
+    </div>
 
     <footer class="piedepagInicio">
         <p>Todos los derechos reservados</p>
