--- a/html/musica.html
+++ b/html/musica.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musica</title>
+    <title>CRÁTER - Musica</title>
+    <meta name="description" content="Escuchá algunos temas de nuestra discografía">
+    <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- LINK FAVICON -->
@@ -16,6 +18,7 @@
 </head>
 
 <body class="paginamusica">
+    <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">CRÁTER</a>
@@ -41,6 +44,8 @@
             </div>
         </div>
     </nav>
+    </header>
+    
     <main class="padremusica">
         <h1>
             MUSICA
