--- a/html/videos.html
+++ b/html/videos.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos</title>
+    <title>CRÁTER - Videos</title>
+    <meta name="description" content="Videos de Cráter tocando en eventos">
+    <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba, Videos">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- LINK FAVICON -->
@@ -16,47 +18,51 @@
 </head>
 
 <body class="paginavideos">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">CRÁTER</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="fotos.html">Fotos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="musica.html">Música</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">CRÁTER</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="fotos.html">Fotos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="musica.html">Música</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="videos.html">Videos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <main>
-        <h1>
+        </nav>
+    </header>
+
+
+    <main class="padreVideo">
+        <h1 class="videostitulo">
             VIDEOS
         </h1>
-        <h2>Crater en vivo en Bohemia Bar</h2>
+        <h2 class="videosdescrip">Crater en vivo en Bohemia Bar</h2>
         <section class="videos">
             <ul>
                 <li>
-                    <h3>Humano -CRÁTER-</h3>
+                    Humano -CRÁTER-
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/8nTBUpk2UcU"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </li>
                 <li>
-                    <h3>Caballos de metal -CRÁTER-</h3>
+                    Caballos de metal -CRÁTER-
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/i36O5TZda5k"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
