--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRÁTER</title>
+  <title>CRÁTER - Inicio</title>
+  <meta name="description" content="Banda de Rock and Roll">
+  <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba">
   <!-- LINK BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -16,38 +18,40 @@
 </head>
 
 <body class="paginaDeInicio">
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">CRÁTER</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="html/fotos.html">Fotos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="html/musica.html">Música</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="html/videos.html">Videos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="html/contacto.html">Contacto</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> CRÁTER </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="html/fotos.html">Fotos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/musica.html">Música</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/videos.html">Videos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
 
-  <header class="centroLogo">
+  <main class="centroLogo">
     <img class="logoinicio" src="img/logocrater.png" alt="logocrater">
     <p class="descrip">Banda de rock and roll integrada por Luis Giraudo en voz y guitarra, Mateo Giraudo en guitarra,
       Ignacion Batagglia en bajo, y Denis Binotto en Bateria.</p>
-  </header>
+  </main>
 
 
 
