--- a/html/contacto.html
+++ b/html/contacto.html
@@ -2,85 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRÁTER - Contacto</title>
-    <meta name="description" content="Contacto de la banda Cráter para contrataciones">
-    <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba, Contacto">
-    <!-- CSS -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- LINK FAVICON -->
-    <link rel="shortcut icon" href="../img/logocrater.png" type="image/x-icon">
-    <!-- LINK BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cráter - Contacto</title>
+  <meta name="description" content="Contacto de la banda Cráter para contrataciones">
+  <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba, Contacto">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/style.css">
+  <!-- LINK FAVICON -->
+  <link rel="shortcut icon" href="../img/logocrater.png" type="image/x-icon">
+  <!-- LINK BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body class="paginacontacto">
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">CRÁTER</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="fotos.html">Fotos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="musica.html">Música</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="videos.html">Videos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
 
 
-    <div class="contactopadre">
-        <section class="contacto">
-            <h1>
-                CONTACTO
-            </h1>
-            <form>
-                <input type="text" placeholder="Nombre y apellido">
-                <input type="email" placeholder="Ingrese un e-mail">
-                <textarea name="Mensaje" id="" cols="30" rows="10"></textarea>
-                <input type="submit">
-            </form>
-        </section>
-        <section class="redes">
-            <h2 class="redessociales">REDES SOCIALES</h2>
-            <ul class="redesociales">
-                <li class="socialmedia"> <a class="link" href="https://www.instagram.com/craterrnr/"
-                        target="_blank">INSTAGRAM/CRATERRNR</a></li>
-                <li class="socialmedia"> <a class="link" href="https://api.whatsapp.com/send?phone=+5493564415471"
-                        target="_blank">WHATSAPP</a></li>
-            </ul>
-            <img class="logocontacto" src="../img/logocrater.png" alt="Logo crater">
-        </section>
-    </div>
+  <div id="barraNav">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Cráter</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/fotos.html">Fotos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/musica.html">Música</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/videos.html">Videos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
-    <footer class="piedepagInicio">
-        <p>Todos los derechos reservados</p>
-        <a class="enlacepie" href="https://www.instagram.com/craterrnr/" target="_blank">instagram.com/craterrnr</a>
-    </footer>
+  <div class="contactopadre">
+    <section class="contacto">
+      <h1>
+        CONTACTO
+      </h1>
+      <form>
+        <input type="text" placeholder="Nombre y apellido">
+        <input type="email" placeholder="Ingrese un e-mail">
+        <textarea name="Mensaje" id="" cols="30" rows="10"></textarea>
+        <input type="submit">
+      </form>
+    </section>
+    <section class="redes">
+      <h2 class="redessociales">REDES SOCIALES</h2>
+      <ul class="redesociales">
+        <li class="socialmedia"> <a class="link" href="https://www.instagram.com/craterrnr/"
+            target="_blank">INSTAGRAM/CRATERRNR</a></li>
+        <li class="socialmedia"> <a class="link" href="https://api.whatsapp.com/send?phone=+5493564415471"
+            target="_blank">WHATSAPP</a></li>
+      </ul>
+      <img class="logocontacto" src="../img/logocrater.png" alt="Logo crater">
+    </section>
+  </div>
 
-    <!-- SCRIPT BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+
+  <!-- SCRIPT BOOTSTRAP -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 
 </body>
-
-</html>
