--- a/html/fotos.html
+++ b/html/fotos.html
@@ -2,120 +2,119 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRÁTER - Fotos</title>
-    <meta name="description" content="Galeria de fotos de la banda Cráter, en eventos y shows">
-    <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba, Fotos">
-    <!-- LINK BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- LINK FAVICON -->
-    <link rel="shortcut icon" href="../img/logocrater.png" type="image/x-icon">
-    <!-- LINK CSS -->
-    <link rel="stylesheet" href="../css/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cráter - Fotos</title>
+  <meta name="description" content="Galeria de fotos de la banda Cráter, en eventos y shows">
+  <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba, Fotos">
+  <!-- LINK BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- LINK FAVICON -->
+  <link rel="shortcut icon" href="../img/logocrater.png" type="image/x-icon">
+  <!-- LINK CSS -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="seccionFotos">
-
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">CRÁTER</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="fotos.html">Fotos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="musica.html">Música</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
+<body class="paginaFotos">
+  <div id="barraNav">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Cráter</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/fotos.html">Fotos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/musica.html">Música</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/videos.html">Videos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-
+  </div>
+  <div>
     <h1 class="tituloFotos">Fotos</h1>
+  </div>
 
-    <header class="carrousel">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../img/bohemi.jpg" class="d-block w-100" alt="Crater tocando">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/bohemiaa.jpg" class="d-block w-100" alt="Crater tocando">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/image0 (3).jpeg" class="d-block w-100" alt="Crater tocando">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+  <section class="carrousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/bohemi.jpg" class="d-block w-100" alt="Crater tocando">
         </div>
-
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../img/denis.jpg" class="d-block w-100" alt="denis">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/ensayoluismateo.jpg" class="d-block w-100" alt="ensayo">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/luisbacho.jpg" class="d-block w-100" alt="ensayo">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <div class="carousel-item">
+          <img src="../img/bohemiaa.jpg" class="d-block w-100" alt="Crater tocando">
         </div>
+        <div class="carousel-item">
+          <img src="../img/image0 (3).jpeg" class="d-block w-100" alt="Crater tocando">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
-    </header>
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/denis.jpg" class="d-block w-100" alt="denis">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/ensayoluismateo.jpg" class="d-block w-100" alt="ensayo">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/luisbacho.jpg" class="d-block w-100" alt="ensayo">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
 
-    <footer class="piedepagInicio">
-        <p>Todos los derechos reservados</p>
-        <a class="enlacepie" href="https://www.instagram.com/craterrnr/" target="_blank">instagram.com/craterrnr</a>
-    </footer>
 
 
-    <!-- SCRIPT BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+
+
+  <footer class="pieDePag">
+    <p class="pie">Todos los derechos reservados.</p>
+    <a class="enlacePie" href="https://www.instagram.com/craterrnr/" target="_blank">instagram.com/craterrnr</a>
+  </footer>
+  <!-- SCRIPT BOOTSTRAP -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
-
-</html>
