--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRÁTER - Inicio</title>
+  <title>Cráter - Inicio</title>
   <meta name="description" content="Banda de Rock and Roll">
   <meta name="keywords" content="Rock and roll, Rock, Música, Eventos, Banda, Argentina, Córdoba">
   <!-- LINK BOOTSTRAP -->
@@ -14,14 +14,15 @@
   <!-- LINK FAVICON -->
   <link rel="shortcut icon" href="img/logocrater.png" type="image/x-icon">
   <!-- LINK CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="paginaDeInicio">
-  <header>
-    <nav class="navbar navbar-expand-lg">
+
+  <div id="barraNav">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> CRÁTER </a>
+        <a class="navbar-brand" href="index.html">Cráter</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="html/fotos.html">Fotos</a>
+              <a class="nav-link active" aria-current="page" href="html/fotos.html">Fotos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="html/musica.html">Música</a>
@@ -44,22 +45,27 @@
         </div>
       </div>
     </nav>
-  </header>
+  </div>
+
+  <section id="seccionLogo">
+    <div class="centroLogo">
+      <img src="img/logocrater.png" alt="logocrater">
+    </div>
+  </section>
 
 
-  <main class="centroLogo">
-    <img class="logoinicio" src="img/logocrater.png" alt="logocrater">
-    <p class="descrip">Banda de rock and roll integrada por Luis Giraudo en voz y guitarra, Mateo Giraudo en guitarra,
-      Ignacion Batagglia en bajo, y Denis Binotto en Bateria.</p>
-  </main>
+  <section id="seccionDescripcion">
+    <div class="descripcion">
+      <p class="parrafoDescrip">Somos una banda de la localidad de La Francia (Cba) conformada por Luis Giraudo en voz y
+        guitarra, Mateo Giraudo en guitarra, Denis Binotto en bateria, y Ignacio Battaglia en bajo, que se forma en el
+        año 2019 con la idea de tocar Rock and Roll y desde ese entonces venimos trabajando canciones propias, tratando
+        de promover nuestros temas.</p>
+    </div>
+  </section>
 
-
-
-
-
-  <footer class="piedepagInicio">
-    <p>Todos los derechos reservados</p>
-    <a class="enlacepie" href="https://www.instagram.com/craterrnr/" target="_blank">instagram.com/craterrnr</a>
+  <footer class="pieDePag">
+    <p class="pie">Todos los derechos reservados.</p>
+    <a class="enlacePie" href="https://www.instagram.com/craterrnr/" target="_blank">instagram.com/craterrnr</a>
   </footer>
 
   <!-- SCRIPT BOOTSTRAP -->
